<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="permission_denied">Необходим доступ к хранилищу данных.</string>
    <string name="grant_denied">Предоставить доступ.</string>
    <string name="previous_directory">..</string>
    <string name="nav_open_drawer">Открыть меню</string>
    <string name="nav_close_drawer">Закрыть меню</string>
    <string name="album_atr_hint">Изображение альбома</string>
    <string name="default_duration">0/0</string>
    <string name="custom_eualizer">Пользовательский</string>
    <string name="echo_canceler">Подавитель эха</string>
    <string name="noise_suppressor">Подавитель шума</string>
    <string name="bass_bost">Bass Boost</string>
    <string name="equalizer_string">Эквалайзер</string>
    <string name="bass_boost_not_supported_message">Bass Boost не поддерживается Вашим устройством</string>

    <!--    Player-->
    <string name="playing">Проигрывается</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="play_pause">Play/Pause</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <!--    Player-->


    <!--    Menu options-->
    <string name="all_media_library">Библиотека</string>
    <string name="external_storage">Внешний накопитель</string>
    <string name="artists">Исполнители</string>
    <string name="exit">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--     Menu options-->

</resources>