<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:thumbTint="@color/primary_color"
        android:progressTint="@color/primary_color"
        android:maxWidth="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="0/0"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar">

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/previous"
            android:scaleType="centerCrop"
            android:src="@drawable/previous_icon" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/play_pause"
            android:scaleType="centerCrop"
            android:src="@drawable/play_icon" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/stop"
            android:scaleType="centerCrop"
            android:src="@drawable/stop_icon" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginHorizontal="10dp"
            android:contentDescription="@string/next"
            android:scaleType="centerCrop"
            android:src="@drawable/next_icon" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
