<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:contentDescription="@string/album_atr_hint"
        android:src="@drawable/empty_album_art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_list_color">

        <TextView
            android:id="@+id/playing_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/playing_song_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playing_song_name" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:maxWidth="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playing_song_info" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/default_duration"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekbar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekbar">


            <ImageButton
                android:id="@+id/previous"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="1dp"
                android:background="@color/default_list_color"
                android:contentDescription="@string/previous"
                android:scaleType="centerCrop"
                android:src="@drawable/previous_icon_black" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="1dp"
                android:background="@color/default_list_color"
                android:contentDescription="@string/play_pause"
                android:scaleType="centerCrop"
                android:src="@drawable/play_icon_black" />

            <ImageButton
                android:id="@+id/stop"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="1dp"
                android:background="@color/default_list_color"
                android:contentDescription="@string/stop"
                android:scaleType="centerCrop"
                android:src="@drawable/stop_icon_black" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="1dp"
                android:background="@color/default_list_color"
                android:contentDescription="@string/next"
                android:scaleType="centerCrop"
                android:src="@drawable/next_icon_black" />

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="1dp"
                android:background="@color/default_list_color"
                android:src="@drawable/equalizer_icon"
                android:scaleType="centerCrop"
                android:id="@+id/equqlizer_button"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>