<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SongInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="279dp"
        android:layout_height="280dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/empty_album_art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/playing_song_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_art" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:maxWidth="20sp"
        android:progressTint="@color/primary_color"
        android:thumbTint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playing_song_info" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:text="0/0"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar">


        <ImageButton
            android:id="@+id/previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="1dp"
            android:background="@color/default_list_color"
            android:contentDescription="@string/previous"
            android:scaleType="centerCrop"
            android:src="@drawable/previous_icon_black" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="1dp"
            android:background="@color/default_list_color"
            android:contentDescription="@string/play_pause"
            android:scaleType="centerCrop"
            android:src="@drawable/play_icon_black" />

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="1dp"
            android:background="@color/default_list_color"
            android:contentDescription="@string/stop"
            android:scaleType="centerCrop"
            android:src="@drawable/stop_icon_black" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="1dp"
            android:background="@color/default_list_color"
            android:contentDescription="@string/next"
            android:scaleType="centerCrop"
            android:src="@drawable/next_icon_black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
